--- a/02_Python_Basic.ipynb
+++ b/02_Python_Basic.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Python Basics\n",
     "\n",
-    "In this Note, we will learn how to use Python as a programming language. This will be a summarized version of the official [Python tutorial](https://docs.python.org/3/tutorial/index.html). I omitted some unimportant parts, such as much of dictionary and list. This is not because they are not important, but because we can do the things in simpler way if we use NumPy, SciPy, or AstroPy related packages/classes/modules. Before explaining what they are, I thought it is better to just introduce the core concepts of Python objects very-very briefly, and show how to use them. Then once you got familiar with them, you can `import numpy` and use it freely."
+    "In this Note, we will learn how to use Python as a programming language. This will be a summarized version of the official [Python tutorial](https://docs.python.org/3/tutorial/index.html). I omitted some concepts of Python. This is not because they are not important, but because we can do the things in simpler way if we use NumPy, SciPy, or AstroPy related packages/classes/modules. Before explaining what they are, I thought it is better to just introduce the core concepts of Python objects very-very briefly, and show how to use them. Then once you got familiar with them, you can `import numpy` and use it freely.\n",
+    "\n"
    ]
   },
   {
@@ -27,35 +28,47 @@
     "\n",
     "When you import a package, you can do\n",
     "\n",
-    "    import [package name]\n",
-    "    \n",
+    "```python\n",
+    "    import [package_name]\n",
+    "```\n",
+    "\n",
     "For example, say a package named `pkg`:\n",
-    "    \n",
+    "\n",
+    "```python\n",
     "    import pkg\n",
+    "```\n",
     "\n",
     "Each package may have `sub` packages. Say `pkg` has subpackage `sub`, and you want to load this `sub` only, because none of other subpackages of `pkg` will be used. Then you can do it as\n",
     "\n",
+    "```python\n",
     "    from pkg import sub\n",
-    "    \n",
+    "```    \n",
     "And if there is a *subsub* package named `ssub`, i.e., `ssub` $\\in$ `sub` $\\in$ `pkg`, then you can do\n",
     "\n",
+    "```python\n",
     "    from pkg.sub import ssub\n",
-    "    \n",
+    "```\n",
+    "\n",
     "That is, the `(larger).(smaller).(even_smaller)` style is used in Python to *locate* certain package.\n",
     "\n",
     "To use some functions defined in the package (module), e.g., the function named `sum` which sums all the inputs, you can call this function by the aforementioned \"locating\" method:\n",
     "\n",
+    "```python\n",
     "    ssub.sum(1, 2, 3)\n",
+    "```\n",
     "    \n",
     "If you did `import pkg` only, you have to specify the location of `ssub` too:\n",
     "\n",
+    "```python\n",
     "    pkg.sub.ssub.sum(1, 2, 3)\n",
-    "\n",
+    "```\n",
     "\n",
     "Sometimes you may not like the package name, since even `ssub` feels too long for you. Then use **`as`**:\n",
     "\n",
+    "```python\n",
     "    from pkg.sub import ssub as S\n",
-    "    S.sum(1, 2, 3)\n"
+    "    S.sum(1, 2, 3)\n",
+    "```"
    ]
   },
   {
@@ -66,24 +79,28 @@
     "\n",
     "First is the famous **NumPy**. [Official website](http://www.numpy.org/). Numpy is a package developed for faster numerical calculation in Python, and it is very widely used in almost all of python codes which contains any numerical calculation especially with larger data. It is customary to import it as **np**.\n",
     "\n",
+    "```python\n",
     "    import numpy as np\n",
-    "\n",
+    "```\n",
     "**SciPy** is another widely used one. [Official website](http://www.scipy.org/). It mainly contains modules and functions that will be used if you want to do some scientific calculations, e.g., image processing, curve fitting and optimization, integration and derivatives, FFT and special functions, etc. There are too many different possible usages, so I cannot state \"some widely used\" packages. While you are using Python and want to do certain job and google it, then you may find some SciPy module/function which does the job very efficiently.\n",
     "\n",
     "**matplotlib** is also a very widely used plotting package. [Official website](http://matplotlib.org/). It resembles that of MATLAB style. As time goes, you may have a myriad of times to plot better graphs, and you will very frequently encounter matplotlib. I will not explain about much of this here. Just keep in mind that\n",
     "\n",
+    "```python\n",
     "    import matplotlib.pyplot as plt\n",
-    "    \n",
+    "```    \n",
     "is the most widely used convention than just \"`import matplotlib`\" or \"`import matplotlib.pyplot`\". Every time you see `plt. blahblah`, it usually means `pyplot` of `matplotlib`.\n",
     "\n",
     "\n",
     "**astropy** contains enormous amount of tools that you may use as an astronomer (or even as a physicist or a scientist), and I will not explain about it in detail here. [Official website](http://docs.astropy.org/en/stable/getting_started.html). Some widely used ones are\n",
     "\n",
+    "```python\n",
     "    from astropy import constants as c\n",
     "    from astropy import units as u\n",
     "    from astropy.io import fits\n",
     "    from astropy.stats import sigma_clip\n",
     "    ...\n",
+    "```\n",
     "\n",
     "**photutils**, which is an affiliated package of astropy (as Ginga), is the one we will learn in this course. [Official website](http://photutils.readthedocs.io/)."
    ]
