--- a/App_B_Using_Astropy_for_FITS.ipynb
+++ b/App_B_Using_Astropy_for_FITS.ipynb
@@ -6,7 +6,18 @@
    "source": [
     "# `astropy.io.fits`\n",
     "\n",
-    "In astropy, one of the most important function is `fits`, which is used for reading and writing fits file. `ccdproc` or any other packages which loads fits image is strongly recommended to use `astropy.io.fits`. This section is a summary of how to use this function."
+    "In astropy, one of the most important function is `fits`, which is used for reading and writing fits file. `ccdproc` or any other packages which loads fits image is strongly recommended to use `astropy.io.fits`. This section is a summary of how to use this function.\n",
+    "\n",
+    "As of Astropy 2.0, the ``CCDData`` class of ``ccdproc`` has implemented to ``astropy.nddata``. So the previous\n",
+    "```python\n",
+    "from ccdproc import CCDData\n",
+    "```\n",
+    "is identical to \n",
+    "\n",
+    "```python\n",
+    "from astropy.nddata import CCDData\n",
+    "```\n",
+    "The ``ccdproc.CCDData`` may be deprecated soon by [issue #510](https://github.com/astropy/ccdproc/issues/510)."
    ]
   },
   {
