--- a/13_Useful_Functionalities.ipynb
+++ b/13_Useful_Functionalities.ipynb
@@ -5,14 +5,15 @@
    "metadata": {},
    "source": [
     "# Useful Functionalities\n",
-    "Since Astropy is not a successor of IRAF, you may not easily find some useful functionalites in astropy-related packages, which were just a \"basic\" set of IRAF functions. These include `IMCOMBINE` with the option `offset=wcs`.\n"
+    "Since Astropy is not a successor of IRAF, you may not easily find some useful functionalites in astropy-related packages, which were just a \"basic\" set of IRAF functions. These include `IMCOMBINE` with the option `offset=wcs`.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Image Combine with Offset\n",
+    "## Image Combine with Offset\n",
     "\n",
     "In `ccdproc`, there is a functionality to combine images, such as function `combine`. You can also do the `combiner` as in the example of [a section in `ccdproc` official manual](http://ccdproc.readthedocs.io/en/latest/ccdproc/image_combination.html). A more friendly way of expressing this is:\n",
     "```python\n",
@@ -39,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -249,6 +252,13 @@
     "\n",
     "```\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract Contour"
    ]
   }
  ],
