--- a/01_Installation.ipynb
+++ b/01_Installation.ipynb
@@ -40,8 +40,7 @@
     "It doesn't matter which one you choose (Python 2 or 3). I recommend to use Anaconda3 and use Python 3, since it is the *future* of Python. \n",
     "\n",
     "When the download is done, turn the terminal on and type as the website says.\n",
-    "\n",
-    "-----"
+    "\n"
    ]
   },
   {
@@ -58,11 +57,9 @@
     "\n",
     "    conda update --all\n",
     "    conda config --add channels http://ssb.stsci.edu/astroconda\n",
-    "    conda create -n iraf python=2.7 iraf pyraf stsci\n",
+    "    conda create -n iraf python=2.7 iraf-all pyraf-all stsci\n",
     "\n",
-    "The name of the environment, `iraf`, is `iraf27` in the original official website, but I just prefer `iraf` for it's shorter. You can set it as any name you like.\n",
-    "\n",
-    "-----"
+    "The name of the environment, `iraf`, is `iraf27` in the original official website, but I just prefer `iraf` for it's shorter. You can set it as any name you like.\n"
    ]
   },
   {
