--- a/Spectroscopy_Concept.ipynb
+++ b/Spectroscopy_Concept.ipynb
@@ -342,7 +342,7 @@
     "\n",
     "*Given the hypothesis that a person has possibility 0.5 to win a game, what is the probability for her to win 3 games in a row?*\n",
     "\n",
-    "In this case, the hypothesis is $H: \\mathrm{\"}p=0.5\\mathrm{\"}$, and the data $D = \\mathrm{\"win~3~in~a~row\"}$. The prior knowledge is that \"the game rule does not change\", \"the person doesn't use faul measures to make the possibility to change over time\", etc, which are just trivial assumptions. In real scientific problems, $I$ can be something like \"the fundamental physical laws do not change over time\", \"this galaxy is spiral for sure (\", etc.\n",
+    "In this case, the hypothesis is $H: \\mathrm{\"}p=0.5\\mathrm{\"}$, and the data $D = \\mathrm{\"win~3~in~a~row\"}$. The prior knowledge is that \"the game rule does not change\", \"the person doesn't use faul measures to make the possibility to change over time\", etc, which are just trivial assumptions. In real scientific problems, $I$ can be something like \"the fundamental physical laws do not change over time\", \"this galaxy is spiral for sure (if you're working on rotational curves of S galaxies, you may assume your samples are definitely S, not E or Irr)\", etc.\n",
     "\n",
     "The model selection is done based on the **Bayes' ratio** or the **odds ratio**:\n",
     "\n",
