Update wrong normalization formulae
I used 1-D integration, not 2-D...

--- a/04_Ground_Based_Concept.ipynb
+++ b/04_Ground_Based_Concept.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "$$ f_{\\rm Gauss}(r) = A e^{ -(r-r_0)^2/2\\sigma^2 } $$\n",
     "\n",
-    "Here, $r$ is the distance from the center, $r_0$, and $\\sigma$ is the standard deviation of the profile. The normalization constant $A = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}}$, such that the integration $ \\int_{-\\infty}^{+\\infty} f_{\\rm Gauss}(r) dr = 1$. \n",
+    "Here, $r$ is the distance from the center, $r_0$, and $\\sigma$ is the standard deviation of the profile. The normalization constant $A = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}}$, such that the integration $ \\int_{-\\infty}^{+\\infty} f_{\\rm Gauss}(r) 2\\pi r dr = 1$. \n",
     "\n",
     "The FWHM is calculated by setting $f_{\\rm Gauss}(r_{1/2}) = \\frac{A}{2}$. First we obtain\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "$$f_{\\rm Moffat} (r) = A \\left [ 1 + \\left ( \\frac{r-r_0}{R} \\right )^2 \\right ]^{-\\beta} ~.$$\n",
     "\n",
-    "Here, $r$ is the distance from the center, $r_0$, as in Gauss psf. By integration, I obtained the normalization constant $ A = \\frac{\\Gamma(\\beta)}{R\\sqrt{\\pi} \\Gamma(\\beta-\\frac{1}{2})} $. The parameter $R$ is called the core width and $\\beta$ is called the power. In [astropy Moffat 2D](http://docs.astropy.org/en/stable/api/astropy.modeling.functional_models.Moffat2D.html#astropy.modeling.functional_models.Moffat2D), `gamma` is used for the core width ($R$), and `alpha` is used for the power ($\\beta$), which might be confusing. [IRAF Moffat 2D](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?psfmeasure) uses `alpha` as the core width ($R$) and `beta` for the power ($\\beta$), which has been a more standard notation in astronomy. Moffat considered atmospheric turbulence, instrumental abberation, and photographic receiver when he first instroduced this profile.\n",
+    "Here, $r$ is the distance from the center, $r_0$, as in Gauss psf. By integration, $ \\int_{-\\infty}^{+\\infty} f_{\\rm Moffat}(r) 2\\pi r dr = 1$, I obtained the normalization constant $ A = \\frac{\\beta - 1}{\\pi R^2} $. The parameter $R$ is called the core width and $\\beta$ is called the power. In [astropy Moffat 2D](http://docs.astropy.org/en/stable/api/astropy.modeling.functional_models.Moffat2D.html#astropy.modeling.functional_models.Moffat2D), `gamma` is used for the core width ($R$), and `alpha` is used for the power ($\\beta$), which might be confusing. [IRAF Moffat 2D](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?psfmeasure) uses `alpha` as the core width ($R$) and `beta` for the power ($\\beta$), which has been a more standard notation in astronomy. Moffat considered atmospheric turbulence, instrumental abberation, and photographic receiver when he first instroduced this profile, althought the profile itself is empirical.\n",
     "\n",
     "The FWHM is calculated by setting $f_{\\rm Moffat}(r_{1/2}) = \\frac{A}{2}$. As we did in Gauss example, we obtain\n",
     "\n",
